Actualización de Etiquetas

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderEncisos.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderEncisos.cshtml
@@ -13,6 +13,7 @@
         _renderInfracciones.frm.find("#divInfNumIndv").hide();
         _renderInfracciones.frm.find("#divInfEspecieFlora").hide();
         _renderInfracciones.frm.find("#divInfTipoAprov").hide();
+        _renderInfracciones.frm.find("#divInfUnidadMedida").hide();
 
         //Seleccionar especies por defecto Ninguna | Ninguna
         _renderInfracciones.frm.find("#ddlEspeciesFauna").val('0002226');
@@ -89,6 +90,7 @@
                 _renderInfracciones.frm.find("#divInfNumIndv").hide();
                 _renderInfracciones.frm.find("#divInfEspecieFlora").hide();
                 _renderInfracciones.frm.find("#divInfTipoAprov").hide();
+                _renderInfracciones.frm.find("#divInfUnidadMedida").hide();
                 break;
             case "0000022":
             case "0000023":
@@ -103,6 +105,7 @@
                 _renderInfracciones.frm.find("#divInfEspecieFlora").show();
                 _renderInfracciones.frm.find("#divInfVolumen").show();
                 _renderInfracciones.frm.find("#divInfTipoAprov").show();
+                _renderInfracciones.frm.find("#divInfUnidadMedida").show();
                 break;
             case "0000014":
             case "0000016":
@@ -130,6 +133,7 @@
                 _renderInfracciones.frm.find("#divInfEspecieFauna").show();
                 _renderInfracciones.frm.find("#divInfNumIndv").show();
                 _renderInfracciones.frm.find("#divInfTipoAprov").hide();
+                _renderInfracciones.frm.find("#divInfUnidadMedida").hide();
                 break;
             case "0000003":
             case "0000005":
@@ -153,6 +157,7 @@
             case "0000227":
                 _renderInfracciones.frm.find("#divInfArea").show();
                 _renderInfracciones.frm.find("#divInfTipoAprov").hide();
+                _renderInfracciones.frm.find("#divInfUnidadMedida").hide();
                 break;
             case "0000007":
             case "0000061":
@@ -167,10 +172,12 @@
                 _renderInfracciones.frm.find("#divInfVolumen").show();
                 _renderInfracciones.frm.find("#divInfNumIndv").show();
                 _renderInfracciones.frm.find("#divInfTipoAprov").show();
+                _renderInfracciones.frm.find("#divInfUnidadMedida").show();
                 break;
             case "0000074":
                 _renderInfracciones.frm.find("#divInfEspecieFlora").show();
                 _renderInfracciones.frm.find("#divInfTipoAprov").show();
+                _renderInfracciones.frm.find("#divInfUnidadMedida").show();
                 break;
         }
     };
