--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderVolumenAnalizado.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderVolumenAnalizado.cshtml
@@ -19,7 +19,7 @@
     _renderVolumenAnalizado.fnInitDataTable_Detail = function () {
         var columns_label = [], columns_data = [], options = {};
 
-        columns_label = ["Especie", "Volumen Aprobado Analizado", "Volumen Movilizado Analizado", "Volumen Injustificado", "Volumen Justificado", "Tipo Aprov.", "U. M.", "PC","Observaciones"];
+        columns_label = ["Especie", "Volumen Aprobado Analizado", "Volumen Movilizado Analizado", "Volumen Injustificado", "Volumen Justificado", "Tipo Aprov.", "UM", "PC","Observaciones"];
         columns_data = ["ESPECIES", "VOLUMEN_APROBADO", "VOLUMEN_MOVILIZADO", "VOLUMEN_INJUSTIFICADO", "VOLUMEN_JUSTIFICADO", "TIPO_APROVECHAMIENTO", "UNIDAD_MEDIDA", "PCA","OBSERVACION"];
         options = {
             page_length: 10, row_index: true, row_edit: true, row_fnEdit: "_renderVolumenAnalizado.fnAddEdit(this)"
