--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderObligacionTitularCusaf.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderObligacionTitularCusaf.cshtml
@@ -36,7 +36,7 @@
             },
             {
                 "data": "OBSERVACION", "title": "Observación", "width": "50%", "orderable": false, "searchable": false, "mRender": function (data, type, row, meta) {
-                    return '<input class="form-control form-control-sm" type="text" value="' + data + '" style="width:100%;" oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,\'\')">';
+                    return '<input class="form-control form-control-sm" type="text" value="' + data + '" style="width:100%;" style="width:100%;" onkeypress = "return utilSigo.checkLetter(event);">';
                 }
             }
         ];
