--- a/SIGOFCv3/Areas/General/Views/Controles/_ControlCalidad.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Controles/_ControlCalidad.cshtml
@@ -5,7 +5,7 @@
 
 <div class="card" id="frmControlCalidad">
     @Html.Hidden("hdfCodGrupoUsuario", (object)ViewBag.hdfCodGrupoUsuario)
-    @Html.Hidden("validarCodEstadoDoc", (object)ViewBag.validarCodEstadoDoc)
+    @Html.Hidden("hdfIndicadorCalidadId", (object)Model.ddlIndicadorId)
     <div class="card-header text-small"></div>
     <div class="card-body">
         <div class="form-row">
