--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_FormatoControlCalidad.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_FormatoControlCalidad.cshtml
@@ -51,7 +51,7 @@
             return false;
         },
         fnAddJefe: () => {
-            var codEstadoDoc = _ControlCalidad.frm.find("#validarCodEstadoDoc").val();
+            var codEstadoDoc = _ControlCalidad.frm.find("#hdfIndicadorCalidadId").val();
             if (codEstadoDoc != '0000005') {
                 utilSigo.toastWarning("Primero debe marcar el inicio del control de calidad.");
                 return;
@@ -177,13 +177,10 @@
         fnSave: () => {
             let model = fControlCal.fnGetDataTabla();
 
-            var codEstadoDoc = _ControlCalidad.frm.find("#validarCodEstadoDoc").val();
+            var codEstadoDoc = _ControlCalidad.frm.find("#hdfIndicadorCalidadId").val();
             if (codEstadoDoc == '0000005') {
-                console.log("eJefeODCID", model.eJefeODCID)
-                console.log("fechaRecepcionIS", model.fechaRecepcionIS)
-
                 if (!model.eJefeODCID) {
-                    utilSigo.toastWarning("Debe seleccionar Especialista/Jefe OD que efectúa el control de calidad para continuar con el registro.");
+                    utilSigo.toastWarning("Debe seleccionar el Especialista/Jefe OD que efectúa el control de calidad para continuar con el registro.");
                     return;
                 }
                 if (!model.fechaRecepcionIS) {
