Se agrego los nuevos campos de tipomaderable y unidad de medida en especies aprobadas del plan general

--- a/SIGOFCv3/Areas/THabilitante/Views/ManPlanManejoForestal/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPlanManejoForestal/AddEdit.cshtml
@@ -257,7 +257,7 @@
                                             <table id="tbEspecies" class="table table-hover table-bordered">
                                                 <thead>
                                                     <tr>
-                                                        <th colspan="6" class="text-sm-left">
+                                                        <th colspan="8" class="text-sm-left">
                                                             <div class="form-inline">
                                                                 <strong>Especies aprobadas</strong>
                                                                 <i id="btnNuevoEspecie" class="fa mx-2 fa-lg fa-file-o" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
@@ -278,6 +278,8 @@
                                                         <th>N° Árboles</th>
                                                         <th>Volumnen (m³)</th>
                                                         <th>Bloque</th>
+                                                        <th>Tipo de aprovechamiento</th>
+                                                        <th>UM</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody></tbody>
