--- a/SIGOFCv3/Areas/General/Views/ManCalculoMulta/ManIndPreCon.cshtml
+++ b/SIGOFCv3/Areas/General/Views/ManCalculoMulta/ManIndPreCon.cshtml
@@ -25,35 +25,10 @@
                         <div class="form-group col-md-3">
                             <select class="form-control form-control-sm" id="cboDescripcion">
                                 <option value="0">Todos</option>
-                                <option value="2023">2023</option>
-                                <option value="2022">2022</option>
-                                <option value="2021">2021</option>
-                                <option value="2020">2020</option>
-                                <option value="2019">2019</option>
-                                <option value="2018">2018</option>
-                                <option value="2017">2017</option>
-                                <option value="2016">2016</option>
-                                <option value="2015">2015</option>
-                                <option value="2014">2014</option>
-                                <option value="2013">2013</option>
-                                <option value="2012">2012</option>
-                                <option value="2011">2011</option>
-                                <option value="2010">2010</option>
-                                <option value="2009">2009</option>
-                                <option value="2008">2008</option>
-                                <option value="2007">2007</option>
-                                <option value="2006">2006</option>
-                                <option value="2005">2005</option>
-                                <option value="2004">2004</option>
-                                <option value="2003">2003</option>
-                                <option value="2002">2002</option>
-                                <option value="2001">2001</option>
-                                <option value="2000">2000</option>
-                                <option value="1999">1999</option>
-                                <option value="1998">1998</option>
-                                <option value="1997">1997</option>
-                                <option value="1996">1996</option>
-                                <option value="1995">1995</option>
+                                @for (int i = DateTime.Now.Year; i >= 2018; i--)
+                                {
+                                    <option value="@i">@i</option>
+                                }
                             </select>
                         </div>
                         <div class="btn-group col-md-2" style="padding-top:5px;">
@@ -101,35 +76,10 @@
                         <div class="form-group col-md-4">
                             <label for="cboTipo">Año</label>
                             <select class="form-control form-control-sm" id="cboAnio">
-                                <option value="2023">2023</option>
-                                <option value="2022">2022</option>
-                                <option value="2021">2021</option>
-                                <option value="2020">2020</option>
-                                <option value="2019">2019</option>
-                                <option value="2018">2018</option>
-                                <option value="2017">2017</option>
-                                <option value="2016">2016</option>
-                                <option value="2015">2015</option>
-                                <option value="2014">2014</option>
-                                <option value="2013">2013</option>
-                                <option value="2012">2012</option>
-                                <option value="2011">2011</option>
-                                <option value="2010">2010</option>
-                                <option value="2009">2009</option>
-                                <option value="2008">2008</option>
-                                <option value="2007">2007</option>
-                                <option value="2006">2006</option>
-                                <option value="2005">2005</option>
-                                <option value="2004">2004</option>
-                                <option value="2003">2003</option>
-                                <option value="2002">2002</option>
-                                <option value="2001">2001</option>
-                                <option value="2000">2000</option>
-                                <option value="1999">1999</option>
-                                <option value="1998">1998</option>
-                                <option value="1997">1997</option>
-                                <option value="1996">1996</option>
-                                <option value="1995">1995</option>
+                                @for (int i = DateTime.Now.Year; i >= 2018; i--)
+                                {
+                                    <option value="@i">@i</option>
+                                }
                             </select>
                         </div>
                         <div class="form-group col-md-4">
@@ -195,7 +145,7 @@
         fnLimpiar: () => {
             let frm = $("#divModIndPreCon");
             frm.find("#hdNCodIndPreCon").val('0');
-            frm.find("#cboAnio").val('2021');
+            //frm.find("#cboAnio").val('2021');
             frm.find("#cboMes").val('1');
             frm.find("#txtIPC").val('');           
         },
