Se modifica la cantidad de filas a mostrar en las tablas de Plan General de Manejo Forestal

--- a/SIGOFCv3/Areas/THabilitante/Views/ManPlanManejoForestal/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPlanManejoForestal/AddEdit.cshtml
@@ -266,7 +266,7 @@
                                                                     <input id="fileEspecieAprobada" type="file" style="display:none" size="60" onchange="ManPM.fnImportarEspecieAprobada(event, this);" onclick="ManPM.fnValidarBloque();">
                                                                 </label>
                                                                 <a href="@Url.Content("~/Archivos/Plantilla/EspeciesAprobadas.xlsx")"> <i class="fa mx-2 fa-lg fa-folder-open" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Descargar Plantilla Excel"></i></a>
-                                                                <i class="fa mx-2 fa-lg fa-download" style="cursor:pointer;" onclick="ManPM.exportarExcel('ESPECIE');" data-toggle="tooltip" data-placement="top" title="Descargar Vertices"></i>
+                                                                <i class="fa mx-2 fa-lg fa-download" style="cursor:pointer;" onclick="ManPM.exportarExcel('ESPECIE');" data-toggle="tooltip" data-placement="top" title="Descargar Especies Aprobadas"></i>
                                                                 <strong>Especies aprobadas</strong>
                                                             </div>
                                                         </th>
@@ -301,7 +301,7 @@
                                                                     <input id="fileCoordenada" type="file" style="display:none" size="60" onchange="ManPM.fnImportarCoordenada(event, this);">
                                                                 </label>
                                                                 <a href="@Url.Content("~/Archivos/Plantilla/VerticesPMForestal.xlsx")"> <i class="fa mx-2 fa-lg fa-folder-open" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Descargar Plantilla Excel"></i></a>
-                                                                <i class="fa mx-2 fa-lg fa-download" style="cursor:pointer;" onclick="ManPM.exportarExcel('COORDENADAS');" data-toggle="tooltip" data-placement="top" title="Descargar Vertices"></i>
+                                                                <i class="fa mx-2 fa-lg fa-download" style="cursor:pointer;" onclick="ManPM.exportarExcel('COORDENADAS');" data-toggle="tooltip" data-placement="top" title="Descargar Coordenadas"></i>
                                                                 <strong>Coordenadas</strong>
                                                             </div>
                                                         </th>
@@ -334,7 +334,7 @@
                                                                     <input id="fileEspecieFS" type="file" style="display:none" size="60" onchange="ManPM.fnImportarEspecieFS(event, this);">
                                                                 </label>
                                                                 <a href="@Url.Content("~/Archivos/Plantilla/EspeciesFS.xlsx")"> <i class="fa mx-2 fa-lg fa-folder-open" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Descargar Plantilla Excel"></i></a>
-                                                                <i class="fa mx-2 fa-lg fa-download" style="cursor:pointer;" onclick="ManPM.exportarExcel('FAUNA');" data-toggle="tooltip" data-placement="top" title="Descargar Vertices"></i>
+                                                                <i class="fa mx-2 fa-lg fa-download" style="cursor:pointer;" onclick="ManPM.exportarExcel('FAUNA');" data-toggle="tooltip" data-placement="top" title="Descargar Especies Fauna Silvestre"></i>
                                                                 <strong>Especies Fauna Silvestre</strong>
                                                             </div>
                                                         </th>
