--- a/SIGOFCv3/Areas/THabilitante/Views/ManPlanManejo/AddEditPM.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPlanManejo/AddEditPM.cshtml
@@ -65,6 +65,7 @@
                             <li class="nav-item" id="navDatosTab"><a class="nav-link active" data-toggle="tab" href="#navDatos" role="tab" aria-selected="false">Datos Generales</a></li>
                             <li class="nav-item" id="navDatosAdicTab"><a class="nav-link" data-toggle="tab" href="#navDatosAdic" role="tab" aria-selected="false">Datos Adicionales</a></li>
                             <li class="nav-item" id="navDatosInventarioTab" style="display:none;"><a class="nav-link" data-toggle="tab" href="#navDatosInventario" role="tab" aria-selected="false">Datos del Inventario</a></li>
+                            <li class="nav-item" id="navAcervoDocTab"><a class="nav-link" data-toggle="tab" href="#navAcervoDoc" role="tab" aria-controls="home" aria-selected="false">Acervo Documentario</a></li>
                         </ul>
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade" id="navEstado" role="tabpanel" aria-labelledby="nav-home-tab">
@@ -209,12 +210,12 @@
                                                 <label for="txtUbigeo_" class="text-small">Ubigeo Real</label>
                                                 @Html.EditorFor(m => m.txtUbigeo, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
                                                 @Html.HiddenFor(m => m.txtCodUbigeo)
-                                                
+
                                             </div>
                                             <div class="form-group col-md-6">
                                                 <label for="txtDirecion" class="text-small">Dirección Real</label>
                                                 @Html.EditorFor(m => m.txtDirecion, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
-                                               
+
                                             </div>
                                         </div>
                                     </div>
@@ -616,6 +617,20 @@
                                                 </thead>
                                                 <tbody></tbody>
                                             </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Acervo Documentario-->
+                            <div class="tab-pane fade" id="navAcervoDoc" role="tabpanel" aria-labelledby="nav-home-tab">
+                                <div class="card">
+
+                                    <div class="card-header text-small">Acervo Documentario</div>
+                                    <div class="card-body">
+                                        <div class="form-row">
+                                            @{
+                                                Html.RenderAction("_IntegracionDOCSIADO", "Controles", new { area = "GENERAL", asCriterio = "SUBTIP_TITDOCSIGO", asSubCriterio = "0004", asValor = Model.hdfItemCOD_PMANEJO });
+                                            }
                                         </div>
                                     </div>
                                 </div>
