--- a/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/Index.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/Index.cshtml
@@ -296,6 +296,7 @@
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navEstado" role="tab" aria-controls="home" aria-selected="true">Estado Situacional</a></li>
                             <li class="nav-item"><a class="nav-link active" id="navDatosTab" data-toggle="tab" href="#navDatos" role="tab" aria-controls="home" aria-selected="true">Datos Generales</a></li>
                             <li class="nav-item"><a class="nav-link" id="navDatosAdicTab" data-toggle="tab" href="#navDatosAdic" role="tab" aria-controls="home" aria-selected="false">Datos Adicionales</a></li>
+                            <li class="nav-item"><a class="nav-link" id="navAcervoDocTab" data-toggle="tab" href="#navAcervoDoc" role="tab" aria-controls="home" aria-selected="false">Acervo Documentario</a></li>
                         </ul>
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show" id="navEstado" role="tabpanel" aria-labelledby="nav-home-tab">
@@ -1077,7 +1078,7 @@
                                                 <thead>
                                                     <tr>
                                                         <th colspan="7" class="text-sm-left">
-                                                            <div class="form-inline">                                                                
+                                                            <div class="form-inline">
                                                                 <strong>
                                                                     Historial de Representante Legal
                                                                 </strong>
@@ -1091,6 +1092,20 @@
                                     </div>
                                 </div>
                                 <!-- INICIO TITULAR REPRESENTANTE LEGAL-->
+                            </div>
+                            <!--Acervo Documentario-->
+                            <div class="tab-pane fade" id="navAcervoDoc" role="tabpanel" aria-labelledby="nav-home-tab">
+                                <div class="card">
+                                    
+                                    <div class="card-header text-small">Acervo Documentario</div>
+                                    <div class="card-body">
+                                        <div class="form-row">
+                                            @{
+                                                Html.RenderAction("_IntegracionDOCSIADO", "Controles", new { area = "GENERAL", asCriterio = "SUBTIP_TITDOCSIGO", asSubCriterio = "0001", asValor = Model.hdCodigo_Thabilitante });
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
